--- a/index.css
+++ b/index.css
@@ -1,7 +1,19 @@
 body {
-    background-color: whitesmoke;
+  font-family: sans-serif;
+  background-color: whitesmoke;
 }
 
+.main-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 h1 {
-    color: #fa8072;
+  color: #b22222;
+  font-size: 50px;
+}
+h2 {
+  color: #0b9b46;
+  text-align: center;
+  margin: 50px;
 }
